[metadata]
name = app_server
version = attr: app_server.__version__
author = Arne Gudermann
author_email = ag@mausbrand.de
description = a lightweight web application launcher for gunicorn and static files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/viur-framework/viur-app_server
project_urls =
    Bug Tracker = https://github.com/viur-framework/viur-app_server/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    werkzeug~=3.1.2
    pyyaml~=6.0
    gunicorn~=23.0.0
    fs~=2.4.16
    grpcio>=1.58.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    app_server = app_server:main
